--- a/app/about-us.html
+++ b/app/about-us.html
@@ -53,31 +53,31 @@
 	</div>
 </header>
 	<main class="main angebot">
-	<div class="container angebot-top">
+	<div class="angebot-top">
         <div class="angebot-header">
             <img class="angebot-img" src="img/docms.png" alt="img">
         </div>
-	</div>
-    <div class="container">
-        <div class="angebot-item">Über uns</div>
-        <h1 class="angebot-title">Wir sind Dolmetscher, die Türen öffnen</h1>
-        <div class="angebot-text an-text">Durch jahrelange Erfahrung und ein diverses Team, welches verschiedene Stärken und Ansätze zusammenbringt, gelingt es uns, Möglichkeiten zu schaffen. Wir übersetzen die Fähigkeiten unserer Klient/innen auf Jobs und Ausbildungen in der Privatwirtschaft und wirken auch im Arbeitsalltag vermittelnd und unterstützend. Zusammen mit unseren engagierten Arbeitgebenden, welche einen Unterschied machen wollen, öffnen wir Türen in die Privatwirtschaft. </div>
-        <div class="line-dec">
-            <div class="line-dec-content"></div>
-        </div>
+        <div class="container">
+            <div class="angebot-item">Über uns</div>
+            <h1 class="angebot-title">Wir sind Dolmetscher, die Türen öffnen</h1>
+            <div class="angebot-text an-text">Durch jahrelange Erfahrung und ein diverses Team, welches verschiedene Stärken und Ansätze zusammenbringt, gelingt es uns, Möglichkeiten zu schaffen. Wir übersetzen die Fähigkeiten unserer Klient/innen auf Jobs und Ausbildungen in der Privatwirtschaft und wirken auch im Arbeitsalltag vermittelnd und unterstützend. Zusammen mit unseren engagierten Arbeitgebenden, welche einen Unterschied machen wollen, öffnen wir Türen in die Privatwirtschaft. </div>
+            <div class="line-dec">
+                <div class="line-dec-content"></div>
+            </div>
 
-        <div class="about-us-block">
-            <div class="about-us-img">
-                <img src="img/svg/plagin.svg" alt="img">
+            <div class="about-us-block">
+                <div class="about-us-img">
+                    <img src="img/svg/plagin.svg" alt="img">
+                </div>
+                <h2 class="about-us-title">Unsere Philosophie</h2>
+                <div class="about-us-text">
+                    <p class="text-p">inAut steht für Integration Autismus, arbeitet systemisch-lösungsorientiert und aufbauend auf der Überzeugung, dass neurodiverse Menschen aufgrund ihrer aussergewöhnlichen Fähigkeiten, die oftmals nicht der «Norm» entsprechen, beruflich nicht die Berücksichtigung erhalten, die sie sollten. Durch ihre andere Art zu denken bringen sie Kreativität und Vielfalt in ein Unternehmen.</p>
+                    <p>Die Angebote von inAut sind auf die individuellen Bedürfnisse unserer Klient/innen abgestimmt, erfüllen jedoch auch die Anforderungen der Privatwirtschaft. inAut arbeitet auftragsgebunden und ist bestrebt, möglichst rasch in Zusammenarbeit mit den zuweisenden Stellen, Arbeitgeber/innen und dem Umfeld der Betroffenen nachhaltige, arbeitsmarkttaugliche Lösungen zu Gunsten einer erfolgreichen Arbeitstätigkeit zu finden.</p>
+                </div>
+                <a class="about-us-link" href="#">Zum VIDEO</a>
             </div>
-            <h2 class="about-us-title">Unsere Philosophie</h2>
-            <div class="about-us-text">
-                <p class="text-p">inAut steht für Integration Autismus, arbeitet systemisch-lösungsorientiert und aufbauend auf der Überzeugung, dass neurodiverse Menschen aufgrund ihrer aussergewöhnlichen Fähigkeiten, die oftmals nicht der «Norm» entsprechen, beruflich nicht die Berücksichtigung erhalten, die sie sollten. Durch ihre andere Art zu denken bringen sie Kreativität und Vielfalt in ein Unternehmen.</p>
-                <p>Die Angebote von inAut sind auf die individuellen Bedürfnisse unserer Klient/innen abgestimmt, erfüllen jedoch auch die Anforderungen der Privatwirtschaft. inAut arbeitet auftragsgebunden und ist bestrebt, möglichst rasch in Zusammenarbeit mit den zuweisenden Stellen, Arbeitgeber/innen und dem Umfeld der Betroffenen nachhaltige, arbeitsmarkttaugliche Lösungen zu Gunsten einer erfolgreichen Arbeitstätigkeit zu finden.</p>
-            </div>
-            <a class="about-us-link" href="#">Zum VIDEO</a>
         </div>
-    </div>
+	</div>
 
     <div class="neurodiversity">
 		<div class="container">
