--- a/app/angebot.html
+++ b/app/angebot.html
@@ -53,72 +53,72 @@
 	</div>
 </header>
 	<main class="main angebot">
-	<div class="container angebot-top">
+	<div class="angebot-top">
         <div class="angebot-header">
             <img class="angebot-img" src="img/sk_an.png" alt="img">
         </div>
-	</div>
-    <div class="container">
-        <div class="angebot-item">Angebot</div>
-        <h1 class="angebot-title">Massgeschneiderte Begleitung für Sie</h1>
-        <div class="angebot-text an-text">Die Angebote der inAut GmbH können einzeln oder gesamthaft nacheinander in Anspruch genommen werden, sofern eine Kostengutsprache einer zuweisenden Stelle (z.B. IV-Stellen, Sozialdienst, RAV, Pro Infirmis) vorhanden ist. Sie sind noch nicht bei der IV oder einer anderen Stelle gemeldet, würden aber gerne durch uns unterstützt werden? Rufen Sie uns an, wir beraten Sie gerne!</div>
-        <div class="line-dec">
-            <div class="line-dec-content"></div>
-        </div>
+        <div class="container">
+            <div class="angebot-item">Angebot</div>
+            <h1 class="angebot-title">Massgeschneiderte Begleitung für Sie</h1>
+            <div class="angebot-text an-text">Die Angebote der inAut GmbH können einzeln oder gesamthaft nacheinander in Anspruch genommen werden, sofern eine Kostengutsprache einer zuweisenden Stelle (z.B. IV-Stellen, Sozialdienst, RAV, Pro Infirmis) vorhanden ist. Sie sind noch nicht bei der IV oder einer anderen Stelle gemeldet, würden aber gerne durch uns unterstützt werden? Rufen Sie uns an, wir beraten Sie gerne!</div>
+            <div class="line-dec">
+                <div class="line-dec-content"></div>
+            </div>
 
-        <div class="angebot-block">
-            <div class="row">
-                <div class="col-12 col-sm-4 angebot-block-content">
-                    <div class="angebot-block-img">
-                        <img src="img/svg/nose.svg" alt="img">
+            <div class="angebot-block">
+                <div class="row">
+                    <div class="col-12 col-sm-4 angebot-block-content">
+                        <div class="angebot-block-img">
+                            <img src="img/svg/nose.svg" alt="img">
+                        </div>
+                        <h2 class="angebot-block-title">Suche von Schnuppereinsätzen</h2>
+                        <div class="angebot-text angebot-block-text">inAut macht «praktische» Berufswahl – das bedeutet, dass Wunschberufe dort ausprobiert werden, wo sie auch tatsächlich gelebt werden.</div>
+                        <a class="general-link" href="search-of-trial-missions.html">zum Angebot</a>
                     </div>
-                    <h2 class="angebot-block-title">Suche von Schnuppereinsätzen</h2>
-                    <div class="angebot-text angebot-block-text">inAut macht «praktische» Berufswahl – das bedeutet, dass Wunschberufe dort ausprobiert werden, wo sie auch tatsächlich gelebt werden.</div>
-                    <a class="general-link" href="search-of-trial-missions.html">zum Angebot</a>
-                </div>
-                <div class="col-12 col-sm-4 angebot-block-content">
-                    <div class="angebot-block-img">
-                        <img src="img/svg/scool.svg" alt="img">
+                    <div class="col-12 col-sm-4 angebot-block-content">
+                        <div class="angebot-block-img">
+                            <img src="img/svg/scool.svg" alt="img">
+                        </div>
+                        <h2 class="angebot-block-title">Suche eines Ausbildungsplatzes</h2>
+                        <div class="angebot-text angebot-block-text">Von der Suche auf Online-Plattformen, über Bewerbungen erstellen bis zum Begleiten an Vorstellungsgespräche - inAut unterstützt Sie individuell.</div>
+                        <a class="general-link" href="job-search.html">zum Angebot</a>
                     </div>
-                    <h2 class="angebot-block-title">Suche eines Ausbildungsplatzes</h2>
-                    <div class="angebot-text angebot-block-text">Von der Suche auf Online-Plattformen, über Bewerbungen erstellen bis zum Begleiten an Vorstellungsgespräche - inAut unterstützt Sie individuell.</div>
-                    <a class="general-link" href="job-search.html">zum Angebot</a>
-                </div>
-                <div class="col-12 col-sm-4 angebot-block-content">
-                    <div class="angebot-block-img">
-                        <img src="img/svg/find.svg" alt="img">
+                    <div class="col-12 col-sm-4 angebot-block-content">
+                        <div class="angebot-block-img">
+                            <img src="img/svg/find.svg" alt="img">
+                        </div>
+                        <h2 class="angebot-block-title">Suche einer Festanstellung</h2>
+                        <div class="angebot-text angebot-block-text">Ein massgeschneidertes Stellenprofil,  gezieltes Kommunikationstraining gepaart mit unserem Netzwerk führen Sie zum Erfolg.</div>
+                        <a class="general-link" href="looking-job.html">zum Angebot</a>
                     </div>
-                    <h2 class="angebot-block-title">Suche einer Festanstellung</h2>
-                    <div class="angebot-text angebot-block-text">Ein massgeschneidertes Stellenprofil,  gezieltes Kommunikationstraining gepaart mit unserem Netzwerk führen Sie zum Erfolg.</div>
-                    <a class="general-link" href="looking-job.html">zum Angebot</a>
-                </div>
-                <div class="col-12 col-sm-4 angebot-block-content">
-                    <div class="angebot-block-img">
-                        <img src="img/svg/family.svg" alt="img">
+                    <div class="col-12 col-sm-4 angebot-block-content">
+                        <div class="angebot-block-img">
+                            <img src="img/svg/family.svg" alt="img">
+                        </div>
+                        <h2 class="angebot-block-title">Coaching während der Ausbildung</h2>
+                        <div class="angebot-text angebot-block-text">Eine Ausbildung birgt viele Höhen, aber auch Tiefen. Wir unterstützen Lernende sowie Arbeitgeber/innen auf dem Weg zum erfolgreichen Abschluss. </div>
+                        <a class="general-link" href="coaching-training.html">zum Angebot</a>
                     </div>
-                    <h2 class="angebot-block-title">Coaching während der Ausbildung</h2>
-                    <div class="angebot-text angebot-block-text">Eine Ausbildung birgt viele Höhen, aber auch Tiefen. Wir unterstützen Lernende sowie Arbeitgeber/innen auf dem Weg zum erfolgreichen Abschluss. </div>
-                    <a class="general-link" href="coaching-training.html">zum Angebot</a>
-                </div>
-                <div class="col-12 col-sm-4 angebot-block-content">
-                    <div class="angebot-block-img">
-                        <img src="img/svg/apt.svg" alt="img">
+                    <div class="col-12 col-sm-4 angebot-block-content">
+                        <div class="angebot-block-img">
+                            <img src="img/svg/apt.svg" alt="img">
+                        </div>
+                        <h2 class="angebot-block-title">Berufliche Abklärung in der Privatwirtschaft</h2>
+                        <div class="angebot-text angebot-block-text">Oft ist es schwierig, anhand ein bis zwei Schnuppertagen zu entscheiden, welcher der richtige Beruf ist. Eine Abklärung ist viel aufschlussreicher.</div>
+                        <a class="general-link" href="professional-clarification.html">zum Angebot</a>
                     </div>
-                    <h2 class="angebot-block-title">Berufliche Abklärung in der Privatwirtschaft</h2>
-                    <div class="angebot-text angebot-block-text">Oft ist es schwierig, anhand ein bis zwei Schnuppertagen zu entscheiden, welcher der richtige Beruf ist. Eine Abklärung ist viel aufschlussreicher.</div>
-                    <a class="general-link" href="professional-clarification.html">zum Angebot</a>
-                </div>
-                <div class="col-12 col-sm-4 angebot-block-content">
-                    <div class="angebot-block-img">
-                        <img src="img/svg/comp.svg" alt="img">
+                    <div class="col-12 col-sm-4 angebot-block-content">
+                        <div class="angebot-block-img">
+                            <img src="img/svg/comp.svg" alt="img">
+                        </div>
+                        <h2 class="angebot-block-title">Coaching zum Erhalt eines Arbeitsplatzes</h2>
+                        <div class="angebot-text angebot-block-text">Sie haben Schwierigkeiten aufgrund einer Diagnose in Ihrem bisherigen Job zu bestehen? inAut unterstützt Sie und Ihre/n Arbeitgeber/in. </div>
+                        <a class="general-link" href="coaching-job.html">zum Angebot</a>
                     </div>
-                    <h2 class="angebot-block-title">Coaching zum Erhalt eines Arbeitsplatzes</h2>
-                    <div class="angebot-text angebot-block-text">Sie haben Schwierigkeiten aufgrund einer Diagnose in Ihrem bisherigen Job zu bestehen? inAut unterstützt Sie und Ihre/n Arbeitgeber/in. </div>
-                    <a class="general-link" href="coaching-job.html">zum Angebot</a>
                 </div>
             </div>
         </div>
-    </div>
+	</div>
 
     <div class="neurodiversity">
 		<div class="container">
