--- a/app/_for-companies.html
+++ b/app/_for-companies.html
@@ -1,46 +1,46 @@
 <main class="main angebot">
-	<div class="container angebot-top">
+	<div class="angebot-top">
         <div class="angebot-header">
             <img class="angebot-img" src="img/bildf.png" alt="img">
         </div>
-	</div>
-    <div class="container">
-        <div class="angebot-item">Für Unternehmen</div>
-        <h1 class="angebot-title">Wie mache ich mein Team “neuro”-divers?</h1>
-        <div class="angebot-text an-text">Sie möchten die andere Denkweise neurodiversener Personen in Ihrer Unternehmung nutzen? Gerne würden Sie eine neurodiverse Person, z.B. aus dem Autismus-Spektrum anstellen oder ihr einen Ausbildungsplatz anbieten, wissen jedoch nicht, welche Aufgaben in Ihrer Firma sich eignen würden? Oder Sie beschäftigen bereits eine neurdiverse Person und möchten mehr über die Chancen und Herausforderungen im Berufsalltag erfahren?</div>
-        <div class="line-dec">
-            <div class="line-dec-content"></div>
-        </div>
+        <div class="container">
+            <div class="angebot-item">Für Unternehmen</div>
+            <h1 class="angebot-title">Wie mache ich mein Team “neuro”-divers?</h1>
+            <div class="angebot-text an-text">Sie möchten die andere Denkweise neurodiversener Personen in Ihrer Unternehmung nutzen? Gerne würden Sie eine neurodiverse Person, z.B. aus dem Autismus-Spektrum anstellen oder ihr einen Ausbildungsplatz anbieten, wissen jedoch nicht, welche Aufgaben in Ihrer Firma sich eignen würden? Oder Sie beschäftigen bereits eine neurdiverse Person und möchten mehr über die Chancen und Herausforderungen im Berufsalltag erfahren?</div>
+            <div class="line-dec">
+                <div class="line-dec-content"></div>
+            </div>
 
-        <div class="angebot-block">
-            <div class="row">
-                <div class="col-12 col-sm-4 angebot-block-content">
-                    <div class="angebot-block-img">
-                        <img src="img/svg/chair.svg" alt="img">
+            <div class="angebot-block">
+                <div class="row">
+                    <div class="col-12 col-sm-4 angebot-block-content">
+                        <div class="angebot-block-img">
+                            <img src="img/svg/chair.svg" alt="img">
+                        </div>
+                        <h2 class="angebot-block-title">Eine neurodiverse Person anstellen</h2>
+                        <div class="angebot-text angebot-block-text">Analyse der Anforderungen in Ihrem Unternehmen und Vergleich mit den Anforderungen neurodiverser Menschen.</div>
+                        <a class="general-link" href="hire-person.html">mehr Erfahren</a>
                     </div>
-                    <h2 class="angebot-block-title">Eine neurodiverse Person anstellen</h2>
-                    <div class="angebot-text angebot-block-text">Analyse der Anforderungen in Ihrem Unternehmen und Vergleich mit den Anforderungen neurodiverser Menschen.</div>
-                    <a class="general-link" href="hire-person.html">mehr Erfahren</a>
-                </div>
-                <div class="col-12 col-sm-4 angebot-block-content">
-                    <div class="angebot-block-img">
-                        <img src="img/svg/setm.svg" alt="img">
+                    <div class="col-12 col-sm-4 angebot-block-content">
+                        <div class="angebot-block-img">
+                            <img src="img/svg/setm.svg" alt="img">
+                        </div>
+                        <h2 class="angebot-block-title">Unterstützung im Arbeitsalltag</h2>
+                        <div class="angebot-text angebot-block-text">Hilfestellungen und Lösungsansätze für aktuelle Herausforderungen im Arbeitsalltag.</div>
+                        <a class="general-link" href="support-in-everyday-work.html">mehr Erfahren</a>
                     </div>
-                    <h2 class="angebot-block-title">Unterstützung im Arbeitsalltag</h2>
-                    <div class="angebot-text angebot-block-text">Hilfestellungen und Lösungsansätze für aktuelle Herausforderungen im Arbeitsalltag.</div>
-                    <a class="general-link" href="support-in-everyday-work.html">mehr Erfahren</a>
-                </div>
-                <div class="col-12 col-sm-4 angebot-block-content">
-                    <div class="angebot-block-img">
-                        <img src="img/svg/shapm.svg" alt="img">
+                    <div class="col-12 col-sm-4 angebot-block-content">
+                        <div class="angebot-block-img">
+                            <img src="img/svg/shapm.svg" alt="img">
+                        </div>
+                        <h2 class="angebot-block-title">Weiterbildungen</h2>
+                        <div class="angebot-text angebot-block-text">Workshops und Weiterbildungen zum Thema Neurodiversität (Autismus-Spektrum, AD(H)S).</div>
+                        <a class="general-link" href="advanced-training.html">mehr Erfahren</a>
                     </div>
-                    <h2 class="angebot-block-title">Weiterbildungen</h2>
-                    <div class="angebot-text angebot-block-text">Workshops und Weiterbildungen zum Thema Neurodiversität (Autismus-Spektrum, AD(H)S).</div>
-                    <a class="general-link" href="advanced-training.html">mehr Erfahren</a>
                 </div>
             </div>
         </div>
-    </div>
+	</div>
 
     <div class="contact-us">
 		<div class="container">
