--- a/app/_for-companies.html
+++ b/app/_for-companies.html
@@ -54,10 +54,69 @@
         <div class="container">
             <div class="home-title current-title">Unser Netzwerk</div>
             <div class="our-network-content">
-                <img src="img/autismus_logo.png" alt="img">
-                <img src="img/bso_logo.png" alt="img">
-                <img src="img/auticon_logo.png" alt="img">
+                <div class="swiper-container mySwiper3">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide">
+                            <div class=" d-flex justify-content-around">
+                                <img src="img/autismus_logo.png" alt="img">
+                                <img src="img/bso_logo.png" alt="img">
+                                <img src="img/auticon_logo.png" alt="img">
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class=" d-flex justify-content-around">
+                                <img src="img/autismus_logo.png" alt="img">
+                                <img src="img/bso_logo.png" alt="img">
+                                <img src="img/auticon_logo.png" alt="img">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-button-next"></div>
+                    <div class="swiper-button-prev"></div>
+                    <div class="swiper-pagination"></div>
+                </div>
             </div>
         </div>
     </div>
 </main>
+
+<!-- <div class="swiper-container mySwiper">
+    <div class="swiper-wrapper">
+      <div class="swiper-slide">Slide 1</div>
+      <div class="swiper-slide">Slide 2</div>
+      <div class="swiper-slide">Slide 3</div>
+      <div class="swiper-slide">Slide 4</div>
+      <div class="swiper-slide">Slide 5</div>
+      <div class="swiper-slide">Slide 6</div>
+      <div class="swiper-slide">Slide 7</div>
+      <div class="swiper-slide">Slide 8</div>
+      <div class="swiper-slide">Slide 9</div>
+    </div>
+    <div class="swiper-button-next"></div>
+    <div class="swiper-button-prev"></div>
+    <div class="swiper-pagination"></div>
+  </div> -->
+
+  <!-- <div class="our-network">
+    <div class="container">
+        <div class="home-title current-title">Unser Netzwerk</div>
+        <div class="our-network-content">
+            <div class="swiper-container mySwiper3">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+                        <img src="img/autismus_logo.png" alt="img">
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="img/bso_logo.png" alt="img">
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="img/auticon_logo.png" alt="img">
+                    </div>
+                </div>
+                <div class="swiper-button-next"></div>
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-pagination"></div>
+            </div>
+        </div>
+    </div>
+</div> -->
