--- a/app/index.html
+++ b/app/index.html
@@ -232,7 +232,7 @@
 
 	<!-- our-customers -->
 	<div class="our-customers">
-		<div class="container">
+		<div class="container our-customers-block">
 			<div class="our-customer-slider swiper-container mySwiper2">
 				<div class="swiper-wrapper">
 					<div class="swiper-slide">
@@ -261,28 +261,25 @@
 				<div class="swiper-button-prev"></div>
 				<div class="swiper-pagination"></div>
 			</div>
+			<!-- <i class="fas fa-chevron-left"></i>
+			<i class="fas fa-chevron-right"></i> -->
 		</div>
 	</div>
+	<!-- <div class="our-customers">
+		<div class="container">
+			<div class="">
+				<div class="home-title current-title">Unsere Kunden</div>
+				<div class="our-customers-content img-cover">
+					<h3 class="our-customers-title">«Autismus ist kein Systemfehler, sondern ein anderes Betriebssystem.» </h3>
+					<div class="home-title">Hans Muster, Winterthur</div>
+					<i class="fas fa-chevron-left"></i>
+					<i class="fas fa-chevron-right"></i>
+				</div>
+			</div>
+		</div>
+	</div> -->
 </main>
 
-
-<!--
-<div class="swiper-container mySwiper">
-	<div class="swiper-wrapper">
-	  <div class="swiper-slide">Slide 1</div>
-	  <div class="swiper-slide">Slide 2</div>
-	  <div class="swiper-slide">Slide 3</div>
-	  <div class="swiper-slide">Slide 4</div>
-	  <div class="swiper-slide">Slide 5</div>
-	  <div class="swiper-slide">Slide 6</div>
-	  <div class="swiper-slide">Slide 7</div>
-	  <div class="swiper-slide">Slide 8</div>
-	  <div class="swiper-slide">Slide 9</div>
-	</div>
-	<div class="swiper-button-next"></div>
-	<div class="swiper-button-prev"></div>
-	<div class="swiper-pagination"></div>
-  </div> -->
 	<footer class="footer">
     <div class="footer-content">
         <div class="container">
