slider fix page for-companies

--- a/app/_for-companies.html
+++ b/app/_for-companies.html
@@ -56,19 +56,24 @@
             <div class="our-network-content">
                 <div class="swiper-container mySwiper3">
                     <div class="swiper-wrapper">
-                        <div class="swiper-slide">
-                            <div class=" d-flex justify-content-around">
-                                <img src="img/autismus_logo.png" alt="img">
-                                <img src="img/bso_logo.png" alt="img">
-                                <img src="img/auticon_logo.png" alt="img">
-                            </div>
+                        <!-- <div class="swiper-slide">
+                            <img src="img/autismus_logo.png" alt="img">
+                            <img src="img/bso_logo.png" alt="img">
+                            <img src="img/auticon_logo.png" alt="img">
                         </div>
                         <div class="swiper-slide">
-                            <div class=" d-flex justify-content-around">
-                                <img src="img/autismus_logo.png" alt="img">
-                                <img src="img/bso_logo.png" alt="img">
-                                <img src="img/auticon_logo.png" alt="img">
-                            </div>
+                            <img src="img/autismus_logo.png" alt="img">
+                            <img src="img/bso_logo.png" alt="img">
+                            <img src="img/auticon_logo.png" alt="img">
+                        </div> -->
+                         <div class="swiper-slide">
+                            <img src="img/autismus_logo.png" alt="img">
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="img/bso_logo.png" alt="img">
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="img/auticon_logo.png" alt="img">
                         </div>
                     </div>
                     <div class="swiper-button-next"></div>
