--- a/app/_angebot.html
+++ b/app/_angebot.html
@@ -66,7 +66,7 @@
         </div>
 	</div>
 
-    <div class="neurodiversity">
+    <div class="neurodiversity neurodiversity-mob">
 		<div class="container">
 			<div class="home-title neurodiversity-title">Neurodiversität & Arbeit</div>
 			<h2 class="neurodiversity-item">Wer anders “tickt” kann Aussergewöhnliches leisten</h2>
