--- a/app/_home.html
+++ b/app/_home.html
@@ -9,7 +9,7 @@
 						<div>Ihre Stellensuche</div>
 						<div>in guten Händen</div>
 					</div>
-					<a class="home-btn" href="#">JOBs</a>
+					<a class="home-btn home-btn-mob" href="#">JOBs</a>
 				</div>
 			  </div>
 			  <div class="swiper-slide">
@@ -19,7 +19,7 @@
 						<div>Professionelle Unterstützung bei</div>
 						<div>der Lehrstellensuche</div>
 					</div>
-					<a class="home-btn" href="#">Angebot</a>
+					<a class="home-btn home-btn-mob" href="#">Angebot</a>
 				</div>
 			  </div>
 			  <div class="swiper-slide">
@@ -29,7 +29,7 @@
 						<div>Unterstützung im Arbeitsalltag und</div>
 						<div>Weiterbildung</div>
 					</div>
-					<a class="home-btn" href="#">Für Unternehmen</a>
+					<a class="home-btn home-btn-mob" href="#">Für Unternehmen</a>
 				</div>
 			  </div>
 			</div>
@@ -184,28 +184,37 @@
 					<div class="swiper-slide">
 						<div class="home-title current-title">Unsere Kunden</div>
 						<div class="our-customers-content img-cover">
-							<div class="our-customers-swiper">
-								<h3 class="our-customers-title">«Autismus ist kein Systemfehler, sondern ein anderes Betriebssystem.» </h3>
-								<div class="home-title">Hans Muster, Winterthur</div>
-							</div>
+							<h3 class="our-customers-title">«Autismus ist kein Systemfehler, sondern ein anderes Betriebssystem.»</h3>
+							<div class="home-title">Hans Muster, Winterthur</div>
+						</div>
+						<img class="our-customers-mob-img" src="img/autis_m.png" alt="img">
+						<div class="our-customers-mob">
+							<h3 class="our-customers-title mob-title">«Autismus ist kein Systemfehler, sondern ein anderes Betriebssystem.»</h3>
+							<div class="home-title mob-text">Hans Muster, Winterthur</div>
 						</div>
 					</div>
 					<div class="swiper-slide">
 						<div class="home-title current-title">Unsere Kunden</div>
 						<div class="our-customers-content markus">
-							<div class="our-customers-swiper">
-								<h3 class="our-customers-title markus-title">«Bei inAut steht der Mensch im Mittelpunkt Gemeinsam suchen wir eine Lösung um Menschen mit Autismus eine Perspektive für die Zukunft zu bieten. Die Zusammenarbeit mit InAut ist sehr angenehm.» </h3>
-								<div class="home-title">Markus Löffel, Gerber macht’s</div>
-							</div>
+							<h3 class="our-customers-title markus-title">«Bei inAut steht der Mensch im Mittelpunkt Gemeinsam suchen wir eine Lösung um Menschen mit Autismus eine Perspektive für die Zukunft zu bieten. Die Zusammenarbeit mit InAut ist sehr angenehm.» </h3>
+							<div class="home-title">Markus Löffel, Gerber macht’s</div>
+						</div>
+						<img class="our-customers-mob-img" src="img/autis_m.png" alt="img">
+						<div class="our-customers-mob">
+							<h3 class="our-customers-title mob-title">«Autismus ist kein Systemfehler, sondern ein anderes Betriebssystem.»</h3>
+							<div class="home-title mob-text">Hans Muster, Winterthur</div>
 						</div>
 					</div>
 					<div class="swiper-slide">
 						<div class="home-title current-title">Unsere Kunden</div>
 						<div class="our-customers-content img-cover">
-							<div class="our-customers-swiper">
-								<h3 class="our-customers-title our-customers-heading">«Die Zusammenarbeit mit inAut zeichnet sich durch ein durchdachtes Konzept, gepaart mit einem pragmatischen, einfachen und unkomplizierten Vorgehen aus. Bei Problemen haben wir jederzeit einen festen Ansprechpartner, welcher uns schnell, kompetent und mit viel Fachwissen unterstützt. Ihre Klienten führt die inAut mit viel Geschick, Fingerspitzengefühl und grossem Engagement zum individuellen Erfolg.» </h3>
-								<div class="home-title">Stephan Zigerli, WBF ISCeco</div>
-							</div>
+							<h3 class="our-customers-title our-customers-heading">«Die Zusammenarbeit mit inAut zeichnet sich durch ein durchdachtes Konzept, gepaart mit einem pragmatischen, einfachen und unkomplizierten Vorgehen aus. Bei Problemen haben wir jederzeit einen festen Ansprechpartner, welcher uns schnell, kompetent und mit viel Fachwissen unterstützt. Ihre Klienten führt die inAut mit viel Geschick, Fingerspitzengefühl und grossem Engagement zum individuellen Erfolg.» </h3>
+							<div class="home-title">Stephan Zigerli, WBF ISCeco</div>
+						</div>
+						<img class="our-customers-mob-img" src="img/autis_m.png" alt="img">
+						<div class="our-customers-mob">
+							<h3 class="our-customers-title mob-title">«Autismus ist kein Systemfehler, sondern ein anderes Betriebssystem.»</h3>
+							<div class="home-title mob-text">Hans Muster, Winterthur</div>
 						</div>
 					</div>
 				</div>
