--- a/app/current.html
+++ b/app/current.html
@@ -116,7 +116,7 @@
                         <a class="footer-data" href="mailto:info@inaut.ch">info@inaut.ch</a>
                     </div>
                 </div>
-                <div class="col-12 col-sm-3 indent-col">
+                <div class="col-12 col-sm-3 indent-col footer-menu">
                     <ul>
                         <li class="footer-block">
                             <img src="img/svg/arrows.svg" alt="img">
