--- a/app/angebot.html
+++ b/app/angebot.html
@@ -120,7 +120,7 @@
         </div>
 	</div>
 
-    <div class="neurodiversity">
+    <div class="neurodiversity neurodiversity-mob">
 		<div class="container">
 			<div class="home-title neurodiversity-title">Neurodiversität & Arbeit</div>
 			<h2 class="neurodiversity-item">Wer anders “tickt” kann Aussergewöhnliches leisten</h2>
@@ -162,7 +162,7 @@
                         <a class="footer-data" href="mailto:info@inaut.ch">info@inaut.ch</a>
                     </div>
                 </div>
-                <div class="col-12 col-sm-3 indent-col">
+                <div class="col-12 col-sm-3 indent-col footer-menu">
                     <ul>
                         <li class="footer-block">
                             <img src="img/svg/arrows.svg" alt="img">
