--- a/app/_about-us.html
+++ b/app/_about-us.html
@@ -42,7 +42,7 @@
            <div class="home-title current-title">Unser Team</div>
            <div class="row">
                <div class="col-12 col-md-12 col-sm-6 col-lg-6 our-team-indent our-team-left">
-                    <div class="our-team-block">
+                    <div class="our-team-block our-team-block-mob">
                         <div class="our-team-content">
                             <ul class="our-team-ul">
                                 <li class="our-team-li"><strong class="our-team-strong">MAS PHSG </strong> Supervision & Organisationsberatung</li>
@@ -52,6 +52,7 @@
                             </ul>
                         </div>
                     </div>
+                    <img class="our-team-img-mob" src="img/uder_nik.png" alt="img">
                     <h3 class="our-team-title">Natascha Nikolic</h3>
                     <div class="our-team-text team-indent">Geschäftsführerin und Inhaberin inAut GmbH</div>
                     <div class="our-team-link our-team-text">
@@ -82,7 +83,7 @@
                 </div>
                 </div>
                 <div class="col-12 col-md-12 col-sm-6 col-lg-6 our-team-indent our-team-left">
-                    <div class="our-team-block">
+                    <div class="our-team-block our-team-block-mob">
                         <div class="our-team-content">
                             <ul class="our-team-ul">
                                 <li class="our-team-li"><strong>Somatic Experiencing®-Practitioner / SE-Trauma-Arbeit nach Dr. Peter Levine,</strong> Zentrum für Innere Ökologie Zürich</li>
@@ -92,6 +93,7 @@
                             </ul>
                         </div>
                     </div>
+                    <img class="our-team-img-mob" src="img/uder_nik.png" alt="img">
                     <h3 class="our-team-title">Renate Perrin</h3>
                     <div class="our-team-text team-indent">Coach BE</div>
                     <div class="our-team-link our-team-text">
