--- a/app/_for-companies.html
+++ b/app/_for-companies.html
@@ -1,12 +1,16 @@
 <main class="main angebot">
 	<div class="angebot-top">
-        <div class="angebot-header">
-            <img class="angebot-img" src="img/bildf.png" alt="img">
+        <div class="angebot-top-content">
+            <div class="angebot-header">
+                <img class="angebot-img" src="img/bildf.png" alt="img">
+            </div>
+            <div class="container">
+                <div class="angebot-item">Für Unternehmen</div>
+                <h1 class="angebot-title">Wie mache ich mein Team “neuro”-divers?</h1>
+                <div class="angebot-text an-text">Sie möchten die andere Denkweise neurodiversener Personen in Ihrer Unternehmung nutzen? Gerne würden Sie eine neurodiverse Person, z.B. aus dem Autismus-Spektrum anstellen oder ihr einen Ausbildungsplatz anbieten, wissen jedoch nicht, welche Aufgaben in Ihrer Firma sich eignen würden? Oder Sie beschäftigen bereits eine neurdiverse Person und möchten mehr über die Chancen und Herausforderungen im Berufsalltag erfahren?</div>
+            </div>
         </div>
         <div class="container">
-            <div class="angebot-item">Für Unternehmen</div>
-            <h1 class="angebot-title">Wie mache ich mein Team “neuro”-divers?</h1>
-            <div class="angebot-text an-text">Sie möchten die andere Denkweise neurodiversener Personen in Ihrer Unternehmung nutzen? Gerne würden Sie eine neurodiverse Person, z.B. aus dem Autismus-Spektrum anstellen oder ihr einen Ausbildungsplatz anbieten, wissen jedoch nicht, welche Aufgaben in Ihrer Firma sich eignen würden? Oder Sie beschäftigen bereits eine neurdiverse Person und möchten mehr über die Chancen und Herausforderungen im Berufsalltag erfahren?</div>
             <div class="line-dec">
                 <div class="line-dec-content"></div>
             </div>
