--- a/app/contact.html
+++ b/app/contact.html
@@ -88,6 +88,15 @@
         <div class="contact-map">
             <img src="img/map.png" alt="img">
         </div>
+
+    </div>
+    <div class="container search-missions-back arrow-left-mob">
+        <div class="search-missions-content">
+            <a class="search-missions-img" href="angebot.html">
+                <img src="img/svg/leftm.svg" alt="img">
+            </a>
+            <div class="search-missions-text">Zurück</div>
+        </div>
     </div>
 </main>
 <!-- <main class="main search-missions">
