--- a/app/current.html
+++ b/app/current.html
@@ -71,8 +71,8 @@
             </div>
         </div>
         <div class="news-content">
-            <div class="news-left news-left-block">
-                <img src="img/angular.png" alt="img">
+            <div class="news-left-block">
+                <img class="news-block-img" src="img/angular.png" alt="img">
                 <div class="news-card">
                     <div class="angebot-item">Res Kocher, 20. Mai 2021</div>
                     <h3 class="news-title team-indent">Online Workshop Web-Entwicklung</h3>
@@ -81,8 +81,8 @@
                 </div>
             </div>
 
-            <div class="news-left news-left-block">
-                <img src="img/wdr.png" alt="img">
+            <div class="news-right-block">
+                <img class="news-block-img" src="img/wdr.png" alt="img">
                 <div class="news-card">
                     <div class="angebot-item">WDR, 22. Juni 2021</div>
                     <h3 class="news-title team-indent">Leben als Autist</h3>
