--- a/app/job-description.html
+++ b/app/job-description.html
@@ -53,7 +53,7 @@
 	</div>
 </header>
 	<main class="main search-missions">
-	<div class="container search-missions-container">
+	<div class="container job-description-container">
         <div class="search-missions-way">
             <a class="search-missions-link" href="index.html">Startseite<img src="img/svg/rightm.svg" alt="img"></a>
             <a class="search-missions-link" href="jobs.html">Jobs<img src="img/svg/rightm.svg" alt="img"></a>
@@ -93,7 +93,7 @@
             <a class="job-description-link" href="#">inaut@hin.ch</a>
         </div>
     </div>
-    <div class="contact-us">
+    <div class="contact-us contact-us-mob">
 		<div class="container">
 			<h3>Kontaktieren Sie uns.</h3>
 			<div>Wir unterstützen Sie umfassend und kompetent bei der Berufs- und Arbeitssuche in der Privatwirtschaft.</div>
