--- a/app/_job-description.html
+++ b/app/_job-description.html
@@ -1,5 +1,5 @@
 <main class="main search-missions">
-	<div class="container search-missions-container">
+	<div class="container job-description-container">
         <div class="search-missions-way">
             <a class="search-missions-link" href="index.html">Startseite<img src="img/svg/rightm.svg" alt="img"></a>
             <a class="search-missions-link" href="jobs.html">Jobs<img src="img/svg/rightm.svg" alt="img"></a>
@@ -39,7 +39,7 @@
             <a class="job-description-link" href="#">inaut@hin.ch</a>
         </div>
     </div>
-    <div class="contact-us">
+    <div class="contact-us contact-us-mob">
 		<div class="container">
 			<h3>Kontaktieren Sie uns.</h3>
 			<div>Wir unterstützen Sie umfassend und kompetent bei der Berufs- und Arbeitssuche in der Privatwirtschaft.</div>
