--- a/app/_jobs.html
+++ b/app/_jobs.html
@@ -1,5 +1,5 @@
 <main class="main angebot">
-	<div class="angebot-top">
+	<div class="jobs-page">
         <div class="angebot-header">
             <img class="angebot-img" src="img/jobm.png" alt="img">
         </div>
@@ -60,7 +60,7 @@
         </div>
     </div>
 
-    <div class="contact-us">
+    <div class="contact-us contact-us-mob">
 		<div class="container">
 			<h3>Kontaktieren Sie uns.</h3>
 			<div>Wir unterstützen Sie umfassend und kompetent bei der Berufs- und Arbeitssuche in der Privatwirtschaft.</div>
