--- a/app/jobs.html
+++ b/app/jobs.html
@@ -53,7 +53,7 @@
 	</div>
 </header>
 	<main class="main angebot">
-	<div class="angebot-top">
+	<div class="jobs-page">
         <div class="angebot-header">
             <img class="angebot-img" src="img/jobm.png" alt="img">
         </div>
@@ -114,7 +114,7 @@
         </div>
     </div>
 
-    <div class="contact-us">
+    <div class="contact-us contact-us-mob">
 		<div class="container">
 			<h3>Kontaktieren Sie uns.</h3>
 			<div>Wir unterstützen Sie umfassend und kompetent bei der Berufs- und Arbeitssuche in der Privatwirtschaft.</div>
