--- a/app/angebot.html
+++ b/app/angebot.html
@@ -132,7 +132,8 @@
 				inAut unterstützt auch Menschen, bei denen eine psychosoziale, affektive oder verhaltensauffällige Persönlichkeitsstörung oder eine Depression diagnostiziert wurde.  Aus unserer Erfahrung brauchen Betroffene mehrere Versuche, um im Arbeitsalltag der Privatwirtschaft erstmals, oder auch nach einer längeren Arbeitsunfähigkeit wieder Fuss zu fassen…
 			</p>
 			<img class="neurodiversity-img" src="img/svg/plus.svg" alt="img">
-			<div class="neurodiversity-more">Mehr</div>
+            <a class="neurodiversity-more" href="#">Mehr</a>
+			<!-- <div class="neurodiversity-more">Mehr</div> -->
 		</div>
 	</div>
 
