--- a/app/index.html
+++ b/app/index.html
@@ -180,7 +180,8 @@
 				definiert sein. Neurodiverse Menschen sind also nicht «krank», ihr Gehirn ist einfach anders
 			</p>
 			<img class="neurodiversity-img" src="img/svg/plus.svg" alt="img">
-			<div class="neurodiversity-more">Mehr</div>
+			<a class="neurodiversity-more" href="#">Mehr</a>
+			<!-- <div class="neurodiversity-more">Mehr</div> -->
 		</div>
 	</div>
 
