--- a/app/contact.html
+++ b/app/contact.html
@@ -86,7 +86,8 @@
         </div>
 
         <div class="contact-map">
-            <img src="img/map.png" alt="img">
+            <!-- <img src="img/map.png" alt="img"> -->
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d424.2324213661079!2d8.306407957822247!3d47.04575716680256!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x478ffbd4efbe36dd%3A0xc406acff6491f092!2sinAut%20GmbH!5e0!3m2!1sru!2sua!4v1629365093431!5m2!1sru!2sua" width="100%" height="607" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         </div>
 
     </div>
