--- a/app/_hire-person.html
+++ b/app/_hire-person.html
@@ -1,7 +1,7 @@
 <main class="main search-missions">
 	<div class="container search-missions-container">
         <div class="search-missions-way">
-            <a class="search-missions-link" href="index.html">Startseite<img src="img/svg/rightm.svg" alt="img"></a>
+            <a class="search-missions-link" href="home.html">Startseite<img src="img/svg/rightm.svg" alt="img"></a>
             <a class="search-missions-link" href="for-companies.html">Für Unternehmen<img src="img/svg/rightm.svg" alt="img"></a>
             <a class="search-missions-link" href="#">Für Unternehmen</a>
         </div>
