--- a/app/blog-article.html
+++ b/app/blog-article.html
@@ -55,8 +55,8 @@
 	<main class="main search-missions">
 	<div class="container search-missions-container">
         <div class="search-missions-way">
-            <a class="search-missions-link" href="index.html">Startseite<img src="img/svg/rightm.svg" alt="img"></a>
-            <a class="search-missions-link" href="angebot.html">Aktuelles<img src="img/svg/rightm.svg" alt="img"></a>
+            <a class="search-missions-link" href="home.html">Startseite<img src="img/svg/rightm.svg" alt="img"></a>
+            <a class="search-missions-link" href="current.html">Aktuelles<img src="img/svg/rightm.svg" alt="img"></a>
             <a class="search-missions-link" href="#">Online-Workshop Webentwicklung</a>
         </div>
         <div class="search-missions-item">
@@ -121,14 +121,14 @@
         </div>
         <div class="search-missions-back blog-article-arows">
             <div class="search-missions-content">
-                <a class="search-missions-img" href="angebot.html">
+                <a class="search-missions-img" href="current.html">
                     <img src="img/svg/leftm.svg" alt="img">
                 </a>
                 <div class="search-missions-text">Zurück</div>
             </div>
             <div class="search-missions-content">
                 <div class="search-missions-text">Nächster Artikel</div>
-                <a class="search-missions-img blog-article-arows-right" href="angebot.html">
+                <a class="search-missions-img blog-article-arows-right" href="#">
                     <img src="img/svg/ar_right.svg" alt="img">
                 </a>
             </div>
