--- a/app/__home.html
+++ b/app/__home.html
@@ -3,7 +3,7 @@
 @@include('_head.html')
 <body>
 	@@include('_header.html')
-	@@include('_index-content.html')
+	@@include('_home.html')
 	@@include('_footer.html')
 	@@include('_scripts.html')
 </body>
