--- a/app/_coaching-job.html
+++ b/app/_coaching-job.html
@@ -1,7 +1,7 @@
 <main class="main search-missions">
 	<div class="container search-missions-container">
         <div class="search-missions-way">
-            <a class="search-missions-link" href="index.html">Startseite<img src="img/svg/rightm.svg" alt="img"></a>
+            <a class="search-missions-link" href="home.html">Startseite<img src="img/svg/rightm.svg" alt="img"></a>
             <a class="search-missions-link" href="angebot.html">Angebot<img src="img/svg/rightm.svg" alt="img"></a>
             <a class="search-missions-link" href="#">Coaching zum Erhalt eines Arbeitsplatzes</a>
         </div>
