--- a/app/_job-description.html
+++ b/app/_job-description.html
@@ -1,7 +1,7 @@
 <main class="main search-missions">
 	<div class="container job-description-container">
         <div class="search-missions-way">
-            <a class="search-missions-link" href="index.html">Startseite<img src="img/svg/rightm.svg" alt="img"></a>
+            <a class="search-missions-link" href="home.html">Startseite<img src="img/svg/rightm.svg" alt="img"></a>
             <a class="search-missions-link" href="jobs.html">Jobs<img src="img/svg/rightm.svg" alt="img"></a>
             <a class="search-missions-link" href="#">IT-Consultantg</a>
         </div>
@@ -48,7 +48,7 @@
 	</div>
     <div class="container search-missions-back">
         <div class="search-missions-content">
-            <a class="search-missions-img" href="angebot.html">
+            <a class="search-missions-img" href="jobs.html">
                 <img src="img/svg/leftm.svg" alt="img">
             </a>
             <div class="search-missions-text">Zurück</div>
