--- a/app/advanced-training.html
+++ b/app/advanced-training.html
@@ -55,7 +55,7 @@
 	<main class="main search-missions">
 	<div class="container search-missions-container">
         <div class="search-missions-way">
-            <a class="search-missions-link" href="index.html">Startseite<img src="img/svg/rightm.svg" alt="img"></a>
+            <a class="search-missions-link" href="home.html">Startseite<img src="img/svg/rightm.svg" alt="img"></a>
             <a class="search-missions-link" href="for-companies.html">Für Unternehmen<img src="img/svg/rightm.svg" alt="img"></a>
             <a class="search-missions-link" href="#">Weiterbildung</a>
         </div>
