--- a/app/job-search.html
+++ b/app/job-search.html
@@ -55,7 +55,7 @@
 	<main class="main search-missions">
 	<div class="container search-missions-container">
         <div class="search-missions-way">
-            <a class="search-missions-link" href="index.html">Startseite<img src="img/svg/rightm.svg" alt="img"></a>
+            <a class="search-missions-link" href="home.html">Startseite<img src="img/svg/rightm.svg" alt="img"></a>
             <a class="search-missions-link" href="angebot.html">Angebot<img src="img/svg/rightm.svg" alt="img"></a>
             <a class="search-missions-link" href="#">Suche eines Ausbildungsplatzes</a>
         </div>
